[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI/UI.gd" type="Script" id=1]
[ext_resource path="res://src/UI/Tabs settings.tscn" type="PackedScene" id=2]
[ext_resource path="res://asset/fonts/small-ui-font.tres" type="DynamicFont" id=3]

[node name="UI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Score" type="Label" parent="."]
margin_left = 58.0
margin_top = 35.0
margin_right = 120.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 3 )
text = "Bean(s) Collected: %s"

[node name="Cup of Coffee" type="Label" parent="."]
margin_left = 58.0
margin_top = 60.0
margin_right = 196.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 3 )
text = "Coffee : %s"

[node name="Money" type="Label" parent="."]
margin_left = 58.0
margin_top = 85.0
margin_right = 196.0
margin_bottom = 99.0
custom_fonts/font = ExtResource( 3 )
text = "Money : %s"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.290196 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="ColorRect"]
anchor_top = 0.221333
anchor_right = 1.0
anchor_bottom = 0.415333
margin_top = 0.199989
margin_bottom = -0.200012
custom_fonts/font = ExtResource( 3 )
text = "PAUSE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="vbox" type="VBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -57.0
margin_right = 72.0
margin_bottom = 90.0

[node name="Resume" type="Button" parent="ColorRect/vbox"]
margin_right = 144.0
margin_bottom = 24.0
focus_neighbour_top = NodePath("../Quit")
custom_fonts/font = ExtResource( 3 )
text = "Resume"

[node name="Main Menu" type="Button" parent="ColorRect/vbox"]
margin_top = 28.0
margin_right = 144.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 3 )
text = "Main Menu"

[node name="Settings" type="Button" parent="ColorRect/vbox"]
margin_top = 56.0
margin_right = 144.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 3 )
text = "Settings"

[node name="Quit" type="Button" parent="ColorRect/vbox"]
margin_top = 84.0
margin_right = 144.0
margin_bottom = 108.0
focus_neighbour_bottom = NodePath("../Resume")
custom_fonts/font = ExtResource( 3 )
text = "Quit"

[node name="Popup" type="Popup" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.0
margin_top = -123.0
margin_right = 125.0
margin_bottom = 102.0

[node name="ColorRect" type="ColorRect" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.141176, 0.192157, 1 )

[node name="Tabs settings" parent="Popup" instance=ExtResource( 2 )]
custom_fonts/font = ExtResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="ColorRect/vbox/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="ColorRect/vbox/Main Menu" to="." method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="ColorRect/vbox/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="ColorRect/vbox/Quit" to="." method="_on_Quit_pressed"]
